tests/machine/x/c/group_items_iteration.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_items_iteration.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:185:23: error: incompatible types when assigning to type ‘int’ from type ‘struct <anonymous>’
  185 |     tmp7.data[tmp8] = g;
      |                       ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:196:34: error: request for member ‘items’ in something not a structure or union
  196 |     for (int tmp13 = 0; tmp13 < g.items.len; tmp13++) {
      |                                  ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:197:21: error: request for member ‘items’ in something not a structure or union
  197 |       DataItem x = g.items.data[tmp13];
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:201:38: error: request for member ‘key’ in something not a structure or union
  201 |     map_int_bool_put(&tmp14, "tag", g.key);
      |                                      ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:201:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  201 |     map_int_bool_put(&tmp14, "tag", g.key);
      |                              ^~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:63:51: note: expected ‘int’ but argument is of type ‘char *’
   63 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:202:30: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  202 |     map_int_bool_put(&tmp14, "total", total);
      |                              ^~~~~~~
      |                              |
      |                              char *
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:63:51: note: expected ‘int’ but argument is of type ‘char *’
   63 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:203:11: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  203 |     tmp = 0;
      |           ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:211:21: error: request for member ‘tag’ in something not a structure or union
  211 |     tmp18[tmp16] = r.tag;
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:228:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_int’ [-Wformat=]
  228 |   printf("%d\n", result);
      |           ~^     ~~~~~~
      |            |     |
      |            int   list_int

   1: #include <stdio.h>
